--- a/festival-platform/public/index.html
+++ b/festival-platform/public/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo_oct.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_oct.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Simple Fun | Attend festivals easily</title>
+    <title>Julie's Oktoberfest | Attend festivals easily</title>
   </head>
   <body>
     <div id="root"></div>
